--- a/www/public/style.css
+++ b/www/public/style.css
@@ -4,7 +4,8 @@ body {
     align-items: center;
     display: flex;
     justify-content: center;
-    min-height: 100vh
+    min-height: 100vh;
+    margin: 0;
 }
 
 .container {
