add heuristical multiplier to ui
needs some fixin...

--- a/www/public/style.css
+++ b/www/public/style.css
@@ -24,6 +24,10 @@ body {
     border-radius: 5px;
 }
 
+.container .controls input {
+    width: 50px;
+}
+
 #board-canvas {
     border: 1px solid gray;
     border-radius: 5px;
